# Codex

./: Cargo.toml  README.md
.github/workflows/: ci.yml
codex-bench/: Cargo.toml
codex-bench/benches/: merkle.rs  signing.rs  state_tree.rs
codex-bench/src/: lib.rs
codex-consensus/: Cargo.toml
codex-consensus/src/: chain.rs  committee.rs  error.rs  lib.rs  mempool.rs  producer.rs  verifier.rs
codex-consensus/tests/: committee_flow.rs  session.rs
codex-core/: Cargo.toml
codex-core/src/: block.rs  error.rs  event.rs  hashes.rs  lib.rs  namespace.rs  serde_helpers.rs
codex-core/tests/: roundtrip.rs
codex-crypto/: Cargo.toml
codex-crypto/src/: lib.rs
codex-demo/: Cargo.toml
codex-demo/src/: main.rs
codex-domain-examples/: Cargo.toml
codex-domain-examples/src/: asset_ledger.rs  game_rights.rs  lib.rs
codex-ffi/: Cargo.toml  build.rs
codex-ffi/include/: codex.h
codex-ffi/src/: lib.rs
codex-light/: Cargo.toml
codex-light/src/: lib.rs
codex-light/tests/: spv.rs
codex-net/: Cargo.toml
codex-net/src/: error.rs  frame.rs  lib.rs  wire.rs
codex-node/: Cargo.toml
codex-node/src/: block_store.rs  error.rs  lib.rs  node.rs
codex-node/tests/: pipeline.rs
codex-state/: Cargo.toml
codex-state/src/: error.rs  events.rs  handler.rs  lib.rs  merkle.rs  nonce.rs  proof.rs  state.rs  stf.rs
codex-state/tests/: world_first.rs
codex-sync/: Cargo.toml
codex-sync/src/: error.rs  full.rs  lib.rs  snapshot.rs  transport.rs
codex-sync/tests/: two_node_sync.rs
docs/: DESIGN.md
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
