[workspace]
members = [
    "codex-crypto",
    "codex-core",
    "codex-state",
    "codex-consensus",
    "codex-domain-examples",
    "codex-node",
    "codex-sync",
    "codex-light",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/LUDIARS/Codex"
authors = ["LUDIARS"]

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
postcard = { version = "1", features = ["use-std"] }
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
