[package]
name = "codex-sync"
description = "Codex sync protocols: full, fast, and light sync against a pluggable SyncTransport"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
codex-core = { path = "../codex-core" }
codex-crypto = { path = "../codex-crypto" }
codex-state = { path = "../codex-state" }
codex-consensus = { path = "../codex-consensus" }
codex-node = { path = "../codex-node" }
hex = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
codex-domain-examples = { path = "../codex-domain-examples" }
rand_core = { workspace = true }
postcard = { workspace = true }
